package easyExample;

interface Shape {
    Shape myClone();
    void draw();
}
